--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,59 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Sitetemplate</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-</head>
-<body>
+<!doctype html>
 
-<%= yield %>
+<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
+<!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
+<!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
+<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+  <head>
+    <meta charset="utf-8">
+    <%# <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> %>
 
-</body>
+    <title><%= title %></title>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="author" href="humans.txt">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <%= include_stylesheets :application, :media => 'all' %>
+    
+    <script src="/javascripts/libs/modernizr-1.6.min.js"></script>
+  </head>
+
+  <body<%= page_attrs %>>
+
+    <div id="wrapper">
+      <div id="container">
+
+        <%= render "layouts/header"  %>
+
+        <div id="main">
+          <%= yield %>
+        </div>
+
+        <%= render "layouts/footer"  %>
+
+      </div> <!-- end of #container -->
+    </div>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+    <script>!window.jQuery && document.write(unescape('%3Cscript src="/javascripts/libs/jquery-1.4.2.min.js"%3E%3C/script%3E'))</script>
+
+    <%= include_javascripts :application %>
+
+    <!--[if lt IE 7 ]>
+      <script src="/javascripts/libs/dd_belatedpng.min.js"></script>
+      <script> DD_belatedPNG.fix('img, .png_bg'); </script>
+    <![endif]-->
+
+    <% if Rails.env == "production" %>
+      <script>
+        var _gaq=[['_setAccount','XX-XXXXXXX-X'],['_trackPageview']];
+        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
+          g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+          s.parentNode.insertBefore(g,s)}(document,'script'));
+      </script>
+    <% end %>
+  </body>
 </html>
